dataset1235/2025-2/1153765216/users/4118477972/executions/2747719322_1927446959.log
== SUBMISSION (2025-08-19 18:05:32)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n * 0.42, 2)
desconto_63 = round(n * 1 - 0.63)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:23:06)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27= round(n * 0.27, 2)
acrescimo_42 = round(n + n * 0.42, 2)
desconto_63 = round(n -n * 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:20:27)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27= round(n * 0.27, 2)
acrescimo_42 = round(n * 0.42, 2)
desconto_63 = round(n -n * 1 - 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
-0.63
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
-0.63
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
-0.63
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
-0.63
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
-0.63
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
-0.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:43:15)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
descnto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {descnto_63}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 17:43:58)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
descnto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {descnto_63}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:42:33)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
descnto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {descnto_63")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:45:25)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
desconto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:20:28)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27= round(n * 0.27, 2)
acrescimo_42 = round(n * 0.42, 2)
desconto_63 = round(n -n * 1 - 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
-0.63
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
-0.63
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
-0.63
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
-0.63
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
-0.63
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
-0.63
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:42:30)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
descnto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {descnto_63")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:40:56)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
descnto_63 = round(n * (1 - 0.63))
print(f"27% de {n} = {porcentagem_27")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {descnto_63")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 5
    print(f"27% de {n} = {porcentagem_27")
                                         ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:14:02)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27= round(n * 0.27, 2)
acrescimo_42 = round(n * 0.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:09:00)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n * 0.42, 2)
desconto_63 = round(n * 1 - 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
122.51
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24.37
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
324.97
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.27
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5425.57
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:02:46)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
desconto_63 = round(n * 1 - 0.63)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:21:03)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27= round(n * 0.27, 2)
acrescimo_42 = round(n + n * 0.42, 2)
desconto_63 = round(n -n * 0.63, 2)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:05:53)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1 * 0.42, 2)
desconto_63 = round(n * 1 - 0.63)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:05:51)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(1 * 0.42, 2)
desconto_63 = round(n * 1 - 0.63)
print(porcentagem_27)
print(acrescimo_42)
print(desconto_63)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:44:01)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
descnto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {descnto_63}")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:45:22)
-- CODE: 
n = float(input("Digite um numero real:"))
porcentagem_27 = round(n * 0.27, 2)
acrescimo_42 = round(n *1.42, 2)
desconto_63 = round(n * 1 - 0.63)
print(f"27% de {n} = {porcentagem_27}")
print(f"{n} acrescimo de 42% = {acrescimo_42}")
print(f"{n} com desconto de 63% = {desconto_63}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
123.14 com desconto de 63% = 123
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
25.0 com desconto de 63% = 24
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
325.6 com desconto de 63% = 325
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3567.9 com desconto de 63% = 3567
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5426.2 com desconto de 63% = 5426
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
12.15 com desconto de 63% = 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
